# book_recsys

./: .gitignore  pyproject.toml  requirements.txt
book_recsys/: config.py  vecmath.py
book_recsys/api/: app.py  sessions.py
book_recsys/data/: authors.py  books.py  filters.py  genres.py  ingest.py  kcore.py  negatives.py  sample.py  schema.py  splits.py  streaming.py  works.py
book_recsys/eval/: bootstrap.py  experiment.py  harness.py  ledger.py  metrics.py  report.py
book_recsys/features/: document.py  embed.py  index.py  vectorize.py
book_recsys/llm/: client.py  clients.py  fusion.py  overview.py  parse.py  rank.py  rerank.py  retrieve.py  steer.py
book_recsys/models/: aggregate.py  base.py  ensemble.py  recency.py
book_recsys/recbole_adapter/: atomic.py  export.py
book_recsys/ui/: app.py  feed.py  service.py
notebooks/: 00_download_data.ipynb  01_eda.ipynb  02_1_collapse_works.ipynb  02_preprocess_kaggle.ipynb  03_embed_local.ipynb  04_llm_demo.ipynb  05_ablations.ipynb  06_recbole.ipynb  07_models.ipynb  08_evaluation.ipynb  09_genre_ablation.ipynb  10_autoencoder.ipynb  11_hybrid_fusion.ipynb  12_embedding_migration.ipynb  13_eval_embedding_models.ipynb  14_embedding_robustness.ipynb  15_sasrec_vs_autoencoder.ipynb
reports/: REPORT.md  model_report.md
scripts/: demo_llm_uc35.py  enrich_catalog_covers.py  enrich_catalog_genres.py  eval_llm_uc1.py  export_sasrec_preds.py  export_sasrec_state.py  setup_recbole_env.sh  train_multvae.py  verify_sasrec_port.py
tests/: conftest.py  test_config.py  test_e2e.py  test_e2e_content.py  test_e2e_llm.py  test_vecmath.py
tests/api/: test_app.py  test_sessions.py
tests/data/: test_authors.py  test_books.py  test_filters.py  (+9 more)
(+66 files in other folders)
